# Ghost-Coder

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  create_dummy_repo.py  pyproject.toml  test_graph.py  testing_github.py  verify_multilang.py
.github/workflows/: ci.yml
.pytest_cache/v/cache/: lastfailed  nodeids
.workspace/target_repo/: calculator.py  test_fix.py
src/: graph.py  logging_config.py  main.py  metrics.py  state.py
src/agents/: coder.py  qa.py  researcher.py  submitter.py  tester.py
src/multi_agent_orchestration_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: docker_sandbox.py  file_tools.py  github_tools.py  rag_tools.py
tests/: conftest.py  test_coder.py  test_coder_uncovered.py  test_docker_error_paths.py  test_docker_sandbox.py  test_github_tools.py  test_github_tools_uncovered.py  test_graph_integration.py  test_metrics.py  test_pr_flow.py  test_researcher.py  test_smoke.py  test_tester.py  test_tester_error_paths.py
workspace_clones/target_repo/: calculator.py
