[project]
name = "multi-agent-orchestration-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "langchain>=1.2.10",
    "langchain-community>=0.0.38",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "langchain-chroma>=0.1.0",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
