[project]
name = "multi-agent-orchestration-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker==7.1.0",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-groq==0.1.3",
    "langgraph==0.0.53",
    "pygithub==2.8.1",
    "python-dotenv==1.2.2",
    "streamlit==1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
