[project]
name = "multi-agent-orchestration-project"
version = "0.1.0"
description = "Ghost Coder: Autonomous multi-agent GitHub issue resolver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker==7.1.0",
    "langchain==0.3.19",
    "langchain-community==0.3.18",
    "langchain-groq==0.2.5",
    "langgraph==0.2.74",
    "pygithub==2.8.1",
    "python-dotenv==1.2.2",
    "streamlit==1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
